# Python-Estudos

./: .gitignore  .gitignore.orig  README.md  Soso-Python.code-profile
1-change-file-name/: README.md
Estudos-Blockchain/: README.MD  setup.py
curso-1-7-fiap-ml-web-scraping/: beautifulsoup4-web-scraping.ipynb  pyproject.toml
curso-1-8-fiap-ml-selenium/: pyproject.toml  selenium.ipynb
curso-3-2-fiap-ml-api-flask/: main.py  pyproject.toml  requests-api.http
curso-3-3-fiap-ml-api-flask-projeto-completo/: alembic.ini  app_factory.py  config.py  extensions.py  main.py  pyproject.toml  receipe.py  requests-api.http  user.py
curso-3-3-fiap-ml-api-flask-projeto-completo/alembic/: env.py
curso-3-3-fiap-ml-api-flask-projeto-completo/alembic/versions/: 108a33706071_baseline.py  9df388adc3c2_adiciona_coluna_date_de_nascimento.py
curso-3-3-fiap-ml-api-flask-projeto-completo/extensions/: __init__.py  extensions.py
curso-3-3-fiap-ml-api-flask-projeto-completo/instance/: recipes.db
curso-3-3-fiap-ml-api-flask-projeto-completo/models/: __init__.py  receipe.py  user.py
curso-3-4-fiap-ml-api-fast-api/: main.py  pyproject.toml
curso-4-1-visao-computacional-guia-completo/: .gitignore  Pipfile  README.md  bot_python_pinball.py  pyproject.toml
curso-4-1-visao-computacional-guia-completo/aulas-soso/10-yolo/: yolo.ipynb
curso-4-1-visao-computacional-guia-completo/aulas-soso/11-reconhecimento-de-textos-com-ocr-e-tesseract/: reconhecimento-de-textos-com-ocr-e-tesseract.ipynb
curso-4-1-visao-computacional-guia-completo/aulas-soso/4-rastreamento-objetos/: rastreamento_csrt.py  rastreamento_kcf.py
curso-4-10-fiap-ml-arquitetura-ml-e-aprendizado/: .gitignore  pyproject.toml
curso-4-10-fiap-ml-arquitetura-ml-e-aprendizado/1-introducao-aprendizado-supervisionado/: 1-introducao-aprendizado-supervisionado.ipynb  4-modelos-de-regressao.ipynb  5-tecnicas-de-otimizacao-e-ajuste-finos.ipynb
curso-4-10-fiap-ml-arquitetura-ml-e-aprendizado/2-aprendizado-nao-supervisionado/: 5-reducao-dimensionalidade-pca-reconhecimento-facial-sample.ipynb  6-apriori-algoritmo-exemplo-locadora-de-filmes.ipynb  7-modelagem-topicos-e-deteccao-anomalias-lda.ipynb
curso-4-10-fiap-ml-arquitetura-ml-e-aprendizado/3-aprendizado-por-reforco/: 1-q-learning-frozenlake-aula.ipynb  2-q-deep-learning-aula.ipynb  2-q-deep-learning.ipynb
curso-4-10-fiap-ml-arquitetura-ml-e-aprendizado/5-ml-avancado/: Aula_01_Exemplos_gradiente_descendente.ipynb  Aula_03_e_04_Curva_de_aprendizagem_e_lidando_com_overfitting.ipynb  README.md
curso-4-3-2-langchain-crie-agentes-ia-apps-com-llms-e-llamaindex/: .env.sample  .gitignore  docker-compose.yml  env.sample  pyproject.toml
curso-4-3-2-langchain-crie-agentes-ia-apps-com-llms-e-llamaindex/01_Engenharia_De_Prompts_Na_Pratica/: 01_roles.ipynb  02_params.ipynb  03_boas_praticas.ipynb  04_output_estruturado.ipynb  05_condicoes.ipynb  06_few_shot.ipynb  07_steps.ipynb  08_cot.ipynb  09_sumarizacao.ipynb  10_texto_complemento.ipynb  11_transformacao_texto.ipynb  12_analise_textual.ipynb
curso-4-3-2-langchain-crie-agentes-ia-apps-com-llms-e-llamaindex/09_LangChain_Estrutura_Basica/: 01_models.ipynb  02_prompt_template.ipynb  04_memory.ipynb  05_chains.ipynb  06_router_chains.ipynb  3_output_parser.ipynb
curso-4-3-2-langchain-crie-agentes-ia-apps-com-llms-e-llamaindex/11_LanghChain_Rag/: 01_document_loader.ipynb  02_text_splitting_embedding.ipynb  03_embeddings.ipynb  04_vector_store.ipynb  05_mini_projeto_converse_com_seus_documentos.ipynb  9-embeddings.ipynb
curso-4-3-2-langchain-crie-agentes-ia-apps-com-llms-e-llamaindex/12_LangChain_LCEL_Tools_Agentes/: 01_intro_LCEL.ipynb  02_tagging.ipynb  03_extraction.ipynb  04_tools.ipynb  07_agent.ipynb  08_agente_analista.ipynb
curso-4-3-2-langchain-crie-agentes-ia-apps-com-llms-e-llamaindex/13_LLMs_Overview_Explorando_Algumas_LLMs/: 01_groq_python.ipynb  02_groq_langchain.ipynb  03_gemini_python.ipynb  04_gemini_langchain.ipynb  05_mistral_python.ipynb  06_mistral_langchain.ipynb  07_cohere_python.ipynb  08_cohere_langchain.ipynb
curso-4-3-2-langchain-crie-agentes-ia-apps-com-llms-e-llamaindex/ClaudeCodeCowork_01_RAG_Conversacional_Exemplo/: COMO_EXECUTAR.md  chat_com_memoria_rag.py
curso-4-3-2-langchain-crie-agentes-ia-apps-com-llms-e-llamaindex/ClaudeCodeCowork_02_Exemplos_Runnable/: runnables_sample.py  toll_calling_chained_sample.py  tool_calling_sample.py
curso-4-3-3-LangChain-Agentic-AI-Engineering-LangChain-LangGraph/: env.sample  pyproject.toml
curso-4-3-3-LangChain-Agentic-AI-Engineering-LangChain-LangGraph/1_get_started/: main.py
curso-4-3-3-LangChain-Agentic-AI-Engineering-LangChain-LangGraph/2_ai_agents/: main.py
curso-4-3-3-LangChain-Agentic-AI-Engineering-LangChain-LangGraph/3_ai_agents_under_the_hood/: 1_agent_loop_langchain_tool_calling.py  2_raw_react_prompt.py
curso-4-3-3-LangChain-Agentic-AI-Engineering-LangChain-LangGraph/4_RAG_Embeddings_Vector_Databases_Retrieval/: ingestion.py  main.py
curso-4-8-3-fiap-ml-arquitetura-ml-e-aprendizado/: pyproject.toml
curso-4-8-3-fiap-ml-arquitetura-ml-e-aprendizado/2-aprendizado-nao-supervisionado/: 4-reducao-de-dimensionalidade-e-pca.ipynb
curso-4-8-3-fiap-ml-arquitetura-ml-e-aprendizado/3-aprendizado-por-reforco/: 1-q-learning-frozenlake.ipynb
curso-4-8-3-fiap-ml-arquitetura-ml-e-aprendizado/5-ml-avancado/: Aula_02_Exemplo_validação_cruzada_e_bootstrapping.ipynb
curso-4-8-fiap-ml-introducao-machine-learning-com-python/: estudos_gread_search.ipynb  iril_model_aula_fundamentos_ml.ipynb  pyproject.toml
curso-4-9-fiap-ml-modelos-em-apis/: .gitignore  README.md  main.py  modelos.ipynb  predictions.db  pyproject.toml  requests-api.http  requirements.txt  vercel-requests-api.http
curso-4-9-fiap-ml-modelos-em-apis/infra/: .terraform.lock.hcl  _sample_main  main.tf  terraform.tfstate.backup
estudos-4-poetry-skeleton/: pyproject.toml
estudos-5-1-python-logging/: api.py  log_context_filter.py  log_context_manager.py  log_json_formatter.py  main.py  pyproject.toml  service.py
estudos-6-1-yfance-s3/: b3_yfinance_local.py  b3_yfinance_s3.py  pyproject.toml
(+589 files in other folders)
