[project]
name = "curso-1-8-fiap-ml-selenium"
version = "0.1.0"
description = ""
authors = [
    {name = "Sóstenes Souza",email = "sostenes198br@hotmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "webdriver-manager (>=4.0.2,<5.0.0)",
    "selenium (>=4.35.0,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
