[project]
name = "curso-4-1-visao-computacional-guia-completo"
version = "0.1.0"
description = ""
authors = [
    {name = "Sóstenes Souza",email = "sostenes198br@hotmail.com"}
]
readme = "README.md"
requires-python = "3.12.10"
dependencies = [
    "opencv-python (>=4.13.0.90,<5.0.0.0)",
    "cmake (>=4.2.1,<5.0.0)",
    "wheel (>=0.45.1,<0.46.0)",
    "pillow (>=12.1.0,<13.0.0)",
    "opencv-contrib-python (>=4.13.0.90,<5.0.0.0)",
    "scikit-learn (>=1.8.0,<2.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "numpy (>=2.4.1,<3.0.0)",
    "tensorflow (>=2.20.0,<3.0.0)",
    "visualkeras (>=0.2.0,<0.3.0)",
    "pydot (>=4.0.1,<5.0.0)",
    "mss (>=10.1.0,<11.0.0)",
    "pyautogui (>=0.9.54,<0.10.0)",
    "keyboard (>=0.13.5,<0.14.0)",
    "ultralytics (>=8.4.6,<9.0.0)",
    "pytesseract (>=0.3.13,<0.4.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pandas-stubs (>=2.3.3.260113,<3.0.0.0)",
    "visualkeras (>=0.2.0,<0.3.0)",
    "ann-visualizer (>=2.5,<3.0)",
    "pydot (>=4.0.1,<5.0.0)"
]
