[project]
name = "curso-4-3-2-langchain-crie-agentes-ia-apps-com-llms-e-llamaindex"
version = "0.1.0"
description = ""
authors = [
    {name = "Sóstenes Souza",email = "sostenes198br@hotmail.com"}
]
requires-python = "=3.12.10"
dependencies = [
    "groq (>=1.1.2,<2.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "chromadb (>=1.5.7,<2.0.0)",
    "sentence-transformers (>=5.4.0,<6.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "jupyterlab (>=4.5.6,<5.0.0)"
]
