[project]
name = "curso-3-5-fiap-ml-arquitetura-ml-e-aprendizado"
version = "0.1.0"
description = ""
authors = [
    {name = "Sóstenes Souza",email = "sostenes198br@hotmail.com"}
]
readme = "README.md"
requires-python = "=3.12.10"
dependencies = [
    "pandas (>=3.0.0,<4.0.0)",
    "numpy (>=2.4.2,<3.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "scikit-learn (>=1.8.0,<2.0.0)",
    "xgboost (>=3.2.0,<4.0.0)",
    "apyori (>=1.1.2,<2.0.0)",
    "bs4 (>=0.0.2,<0.0.3)",
    "gym (>=0.26.2,<0.27.0)",
    "pygame (>=2.6.1,<3.0.0)",
    "pyyaml (>=6.0.3,<7.0.0)",
    "imageio (>=2.37.2,<3.0.0)",
    "imageio-ffmpeg (>=0.6.0,<0.7.0)",
    "pyglet (>=2.1.13,<3.0.0)",
    "tqdm (>=4.67.3,<5.0.0)",
    "ffmpeg (>=1.4,<2.0)",
    "xvfbwrapper (>=0.2.20,<0.3.0)",
    "pyvirtualdisplay (>=3.0,<4.0)",
    "gymnasium (>=1.2.3,<2.0.0)",
    "tensorflow (>=2.20.0,<3.0.0)",
    "pydantic (>=2.12.5,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
