[project]
name = "estudos-6-1-yfance-s3"
version = "0.1.0"
description = ""
authors = [
    {name = "Sóstenes Souza",email = "sostenes198br@hotmail.com"}
]
readme = "README.md"
requires-python = "=3.12.10"
dependencies = [
    "yfinance (>=1.0,<2.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "s3fs (>=2025.12.0,<2026.0.0)",
    "pyarrow (>=22.0.0,<23.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
